--- a/net/openggsn/Makefile
+++ b/net/openggsn/Makefile
@@ -13,7 +13,7 @@ LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 GNU_CONFIGURE=	yes
-USES=		autoreconf gmake libtool
+USES=		autoreconf gmake libtool pkgconfig
 
 post-patch:
 	${REINPLACE_CMD} -e 's|pkgconfigdir.*|pkgconfigdir = ${PREFIX}/libdata/pkgconfig|g' \
